edition = "2023";

package otterscale.fleet.v1;

import "api/annotations.proto";

option go_package = "github.com/otterscale/otterscale-agent/api/fleet/v1;pb";

// FleetService manages the lifecycle of agent-to-server tunnel connections,
// including registration and health checking.
service FleetService {
  // ListClusters returns all cluster identifiers that the current agent
  // is registered to. This is used to discover which clusters are available
  // for tunnel connections.
  rpc ListClusters(ListClustersRequest) returns (ListClustersResponse) {
    option (otterscale.api.feature) = {
      name: "fleet-enabled"
    };
  };

  // Register allows an agent to register itself with the tunnel server.
  // The agent sends its cluster identity and tunnel port; the server responds
  // with its fingerprint so the agent can verify the tunnel connection.
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (otterscale.api.feature) = {
      name: "fleet-enabled"
    };
  };
}

// ListClustersRequest is an empty request message for listing clusters.
message ListClustersRequest {}

// ListClustersResponse contains the list of clusters the agent is registered to.
message ListClustersResponse {
  // The list of cluster identifiers.
  repeated string clusters = 1;
}

// RegisterRequest contains the agent's cluster identity and tunnel port.
message RegisterRequest {
  // The cluster identifier this agent belongs to.
  string cluster = 1;

  // The agent identifier this agent uses to register with the server.
  string agent_id = 2;
}

// RegisterResponse contains the server's fingerprint for the agent to verify the connection.
message RegisterResponse {
  // The loopback endpoint reserved for this cluster tunnel.
  string endpoint = 1;

  // The server's tunnel fingerprint, used by the agent to verify the connection.
  string fingerprint = 2;

  // The token for the agent to register with the server.
  string token = 3;
}
